fixed homepage image getting cutoff when resizing window vertically

--- a/bernies-ties/public/stylesheets/style.css
+++ b/bernies-ties/public/stylesheets/style.css
@@ -15,7 +15,8 @@ a {
 div#portrait {
 	position: absolute;
 	right: 0;
-	bottom: 0;
+	bottom: auto;
+	margin-top: -50px;
 	z-index: -1;
 }
 
